<?xml version="1.0"?>
<package format="3">
  <name>lqr_controller</name>
  <version>0.0.1</version>
  <description>Nav2 Controller plugin implementing an iterative‐LQR local planner</description>
  <maintainer email="nakarin_jett@gmail.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp_lifecycle</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>nav2_util</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>Eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/iterative_lqr_controller_plugin.xml"/>
  </export>
</package>
