<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omni_carver_pure_pursuit</name>
  <version>0.1.0</version>
  <description>Pure pursuit</description>
  <maintainer email="you@your.email">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_common</depend>
  <depend>nav2_core</depend>
  <depend>nav2_util</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>pluginlib</depend>
  <depend>tf2</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/pure_pursuit_controller_plugin.xml" />
  </export>

</package>
