<?xml version="1.0"?>
<package format="3">
  <name>omni_mpc_controller</name>
  <version>0.1.0</version>
  <description>
    MPPI-based omnidirectional MPC controller plugin for ROS2 Navigation2 (Jazzy).
  </description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp_lifecycle</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>

  <export>
    <nav2_core plugin="omni_mpc_controller.xml"/>
  </export>
</package>
