<?xml version="1.0"?>
<package format="3">
  <name>omni_sbmpo_controller</name>
  <version>0.1.0</version>
  <description>SBMPO local controller plugin for omnidirectional robots</description>
  <maintainer email="you@your.email">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp_lifecycle</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>nav2_util</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/omni_sbmpo_controller_plugin.xml"/>
  </export>
</package>
